# ChangeLog for dev-perl/text-reform
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/text-reform/ChangeLog,v 1.17 2006/08/06 03:11:59 mcummings Exp $

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  text-reform-1.11.ebuild:
  Adding perl dep; fixed DEPEND

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  text-reform-1.11.ebuild:
  Stable on hppa

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  text-reform-1.11.ebuild:
  Add ~x86-fbsd keyword.

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org> text-reform-1.11.ebuild:
  Mark 1.11 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> text-reform-1.11.ebuild:
  add ~ia64

  29 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  text-reform-1.11.ebuild:
  Cleaning for mirror syntax

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  text-reform-1.11.ebuild:
  Stable on ppc.

  22 Apr 2005; Simon Stelling <blubb@gentoo.org> text-reform-1.11.ebuild:
  stable on amd64

  09 Mar 2005; Markus Rothe <corsair@gentoo.org> text-reform-1.11.ebuild:
  Stable on ppc64

  13 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org> text-reform-1.11.ebuild:
  Stable on sparc

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  25 Dec 2004; Yuta SATOH <nigoro@gentoo.org> text-reform-1.11.ebuild:
  added ~ppc64

  30 May 2004; Bryan Østergaard <kloeri@gentoo.org> text-reform-1.11.ebuild:
  Stable on alpha.

  15 Apr 2004; Michael McCabe <randy@gentoo.org> text-reform-1.11.ebuild:
  added s390 to keywords

*text-reform-1.11 (22 Aug 2003)

  22 Aug 2003; Michael Cummings <mcummings@gentoo.org>
  text-reform-1.11.ebuild:
  bug 24883, dep for request tracker, submmitted by Celestial Wizard
  <gentoo@dev.celestialwizard.org>
