@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/text-reform/text-reform-1.11.ebuild,v 1.18 2006/08/06 03:11:59 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/text-reform/text-reform-1.11.ebuild,v 1.19 2007/01/19 16:59:20 mcummings Exp $
 
 EAPI="prefix"
 
@@ -11,7 +11,7 @@ S=${WORKDIR}/${MY_P}
 
 DESCRIPTION="Manual text wrapping and reformatting"
 SRC_URI="mirror://cpan/authors/id/D/DC/DCONWAY/${MY_P}.tar.gz"
-HOMEPAGE="http://www.cpan.org/modules/by-module/Text/${MY_P}.readme"
+HOMEPAGE="http://search.cpan.org/~dconway/"
 
 SLOT="0"
 LICENSE="|| ( Artistic GPL-2 )"
@@ -20,4 +20,3 @@ IUSE=""
 
 
 DEPEND="dev-lang/perl"
-RDEPEND="${DEPEND}"
